tests/FSharp.Compiler.ComponentTests/Conformance/TypeForwarding/NegativeCases/Class_NG_TurnToStruct.fs
let f = new TurnsToStruct()
let rv = f.getValue() 

exit rv
